Source/WebKit2/UIProcess/API/qt/tests/qmltests/DesktopBehavior/tst_navigationRequested.qml
@@ -1,11 +1,15 @@
 import QtQuick 2.0
 import QtTest 1.0
 import QtWebKit 3.0
+import QtWebKit.experimental 3.0
 
 Item {
     property int expectedLength: 0
     property int totalBytes: 0
     property bool shouldDownload: false
+    property string originatingUrl: ""
+    property url beginUrl: Qt.resolvedUrl("../common/test2.html")
+    property url endUrl: Qt.resolvedUrl("../common/test1.html")
 
     DesktopWebView {
         id: webView
@@ -16,11 +20,12 @@ Item {
 
         onNavigationRequested: {
             if (shouldDownload)
-                request.action = WebView.DownloadRequest
+                request.action = WebViewExperimental.DownloadRequest
             else if (request.button == Qt.MiddleButton && request.modifiers & Qt.ControlModifier) {
                 otherWebView.load(request.url)
                 request.action = WebView.IgnoreRequest
             }
+            originatingUrl = request.originatingUrl
         }
 
         experimental.onDownloadRequested: {
@@ -86,20 +91,22 @@ Item {
             downloadSpy.clear()
             downloadFinishedSpy.clear()
             shouldDownload = false
+            originatingUrl = ""
         }
 
         function test_usePolicy() {
-            webView.load(Qt.resolvedUrl("../common/test2.html"))
+            webView.load(beginUrl)
             spy.wait()
             spy.clear()
             mouseClick(webView, 100, 100, Qt.LeftButton)
             spy.wait()
             compare(spy.count, 1)
             compare(webView.title, "Test page 1")
+            compare(webView.url, endUrl)
         }
 
         function test_ignorePolicy() {
-            webView.load(Qt.resolvedUrl("../common/test2.html"))
+            webView.load(beginUrl)
             spy.wait()
             spy.clear()
             compare(spy.count, 0)
@@ -108,11 +115,13 @@ Item {
             otherSpy.wait()
             compare(spy.count, 0)
             compare(otherSpy.count, 1)
+            compare(webView.url, beginUrl)
             compare(otherWebView.title, "Test page 1")
+            compare(otherWebView.url, endUrl)
         }
 
         function test_downloadPolicy() {
-            webView.load(Qt.resolvedUrl("../common/test2.html"))
+            webView.load(beginUrl)
             spy.wait()
             spy.clear()
             compare(spy.count, 0)
@@ -126,6 +135,17 @@ Item {
             downloadFinishedSpy.wait()
             compare(downloadFinishedSpy.count, 1)
             compare(totalBytes, expectedLength)
+        }
+
+        function test_originatingUrl() {
+            webView.load(beginUrl)
+            spy.wait()
+            spy.clear()
+            mouseClick(webView, 100, 100, Qt.LeftButton)
+            spy.wait()
+            compare(webView.title, "Test page 1")
+            compare(webView.url, endUrl)
+            compare(originatingUrl, beginUrl)
         }
     }
 }
